--- a/Main.resx
+++ b/Main.resx
@@ -121,54 +121,6 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="regularToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="regularToolStripMenuItem.Text" xml:space="preserve">
-    <value>Regular</value>
-  </data>
-  <data name="wifiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="wifiToolStripMenuItem.Text" xml:space="preserve">
-    <value>Wifi</value>
-  </data>
-  <data name="phoneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="phoneToolStripMenuItem.Text" xml:space="preserve">
-    <value>Phone</value>
-  </data>
-  <data name="uRLToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="uRLToolStripMenuItem.Text" xml:space="preserve">
-    <value>URL</value>
-  </data>
-  <data name="sMSToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="sMSToolStripMenuItem.Text" xml:space="preserve">
-    <value>SMS</value>
-  </data>
-  <data name="calendarEventToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="calendarEventToolStripMenuItem.Text" xml:space="preserve">
-    <value>Calendar event</value>
-  </data>
-  <data name="bookmarkToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="bookmarkToolStripMenuItem.Text" xml:space="preserve">
-    <value>Bookmark</value>
-  </data>
-  <data name="mailToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>153, 22</value>
-  </data>
-  <data name="mailToolStripMenuItem.Text" xml:space="preserve">
-    <value>Mail</value>
-  </data>
   <data name="createToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 20</value>
   </data>
@@ -182,10 +134,10 @@
     <value>From camera</value>
   </data>
   <data name="fromImageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>155, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="fromImageToolStripMenuItem.Text" xml:space="preserve">
-    <value>From image</value>
+    <value>From file</value>
   </data>
   <data name="fromClipboardToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>155, 22</value>
@@ -235,6 +187,54 @@
   </data>
   <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="regularToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="regularToolStripMenuItem.Text" xml:space="preserve">
+    <value>Regular</value>
+  </data>
+  <data name="wifiToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="wifiToolStripMenuItem.Text" xml:space="preserve">
+    <value>Wifi</value>
+  </data>
+  <data name="phoneToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="phoneToolStripMenuItem.Text" xml:space="preserve">
+    <value>Phone</value>
+  </data>
+  <data name="uRLToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="uRLToolStripMenuItem.Text" xml:space="preserve">
+    <value>URL</value>
+  </data>
+  <data name="sMSToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="sMSToolStripMenuItem.Text" xml:space="preserve">
+    <value>SMS</value>
+  </data>
+  <data name="calendarEventToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="calendarEventToolStripMenuItem.Text" xml:space="preserve">
+    <value>Calendar event</value>
+  </data>
+  <data name="bookmarkToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="bookmarkToolStripMenuItem.Text" xml:space="preserve">
+    <value>Bookmark</value>
+  </data>
+  <data name="mailToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 22</value>
+  </data>
+  <data name="mailToolStripMenuItem.Text" xml:space="preserve">
+    <value>Mail</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="textBox1.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
